<resources>
    <string name="app_name">Court Counter</string>
    <string name="team1">Team A</string>
    <string name="team2">Team B</string>
    <string name="initialScore">0</string>
    <string name="addThreePoints">+3 Points</string>
    <string name="addTwoPoints">+2 Points</string>
    <string name="addOnePoint">Free Throw</string>
    <string name="resetScores">Reset</string>
</resources>
