<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:id="@+id/teamInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/layer1LinearLayoutPaddingTop">

        <LinearLayout
            android:layout_width="@dimen/layer2LinearLayoutWidth"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/teamHeaderBottomPadding"
                android:text="@string/team1"
                android:textColor="#616161"
                android:textSize="@dimen/teamHeaderFontSize" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/scoreBottomPadding"
                android:text="@string/initialScore"
                android:textColor="#000000"
                android:textSize="@dimen/scoreHeaderFontSize" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonBottomMargin"
                android:layout_marginLeft="@dimen/buttonSideMargin"
                android:layout_marginRight="@dimen/buttonSideMargin"
                android:onClick="AddThreeTeamA"
                android:text="@string/addThreePoints" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonBottomMargin"
                android:layout_marginLeft="@dimen/buttonSideMargin"
                android:layout_marginRight="@dimen/buttonSideMargin"
                android:onClick="AddTwoTeamA"
                android:text="@string/addTwoPoints" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonBottomMargin"
                android:layout_marginLeft="@dimen/buttonSideMargin"
                android:layout_marginRight="@dimen/buttonSideMargin"
                android:onClick="AddOneTeamA"
                android:text="@string/addOnePoint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layer2LinearLayoutWidth"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/teamHeaderBottomPadding"
                android:text="@string/team2"
                android:textColor="#616161"
                android:textSize="@dimen/teamHeaderFontSize" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/scoreBottomPadding"
                android:text="@string/initialScore"
                android:textColor="#000000"
                android:textSize="@dimen/scoreHeaderFontSize" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonBottomMargin"
                android:layout_marginLeft="@dimen/buttonSideMargin"
                android:layout_marginRight="@dimen/buttonSideMargin"
                android:onClick="AddThreeTeamB"
                android:text="@string/addThreePoints" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonBottomMargin"
                android:layout_marginLeft="@dimen/buttonSideMargin"
                android:layout_marginRight="@dimen/buttonSideMargin"
                android:onClick="AddTwoTeamB"
                android:text="@string/addTwoPoints" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonBottomMargin"
                android:layout_marginLeft="@dimen/buttonSideMargin"
                android:layout_marginRight="@dimen/buttonSideMargin"
                android:onClick="AddOneTeamB"
                android:text="@string/addOnePoint" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/resetButtonBottomPadding"
        android:onClick="resetScores"
        android:text="@string/resetScores" />

    <View
        android:layout_width="@dimen/dividingViewWidth"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/teamInfo"
        android:layout_alignTop="@id/teamInfo"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/layer1LinearLayoutPaddingTop"
        android:background="@android:color/darker_gray" />

</RelativeLayout>
